fix: align text in header nav menu

--- a/online-zoo/pages/landing/landing.css
+++ b/online-zoo/pages/landing/landing.css
@@ -74,6 +74,11 @@ header {
   align-items: center;
   justify-content: space-between;
 }
+.nav-wrapper_text-center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 .logo {
   width: 90px;
   height: 90px;
